# Ticket_T

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEMO.md  README.md  ROADMAP.md  agent.sh  agui_server.py  claude_desktop_config.example.json  mcp_server.py  pyproject.toml  requirements.txt  run_agents.sh
agent_runner/: agui_adapter.py  cli.py  executor.py  langgraph_adapter.py  langgraph_triage.py  parallel.py  registry.py  spinner.py
agents/: _TEMPLATE_AGENT.md  agent_api.md  agent_core.md  agent_schema.md  agent_tests.md
agents/how_to_run/: API.md  CORE.md  Schema.md  Test.md
agui-frontend/: README.md  index.html  package-lock.json  package.json
agui-frontend/src/: App.tsx  api.ts  styles.css  types.ts
agui-frontend/src/components/: AgentForm.tsx  EventStream.tsx  StatusBadge.tsx  TriageForm.tsx
agui-frontend/src/hooks/: useAgentRun.ts
app/: engine.py  main.py  models.py
app/rules/: base.py  config.py  keyword.py  llm.py
demo/: reset.py  verify_after.py  verify_before.py
docs/: agui.md  api.md  architecture.md  cli.md  decisions.md  future_production_features.md  testing.md  upgrades.md
prompts/: _TEMPLATE_PROMPT.md  add_endpoint.md  add_strategy.md  add_telemetry.md  add_tests.md  create_api.md  create_core.md  create_schema.md  create_tests.md  improve_error_handling.md
specs/: agui_phase1.md  agui_phase2.md  agui_phase3.md  agui_phase3_langgraph.md  agui_plan.md  llm_strategy_execution.md  llm_strategy_prd.md
tests/: test_agui_langgraph.py  test_agui_phase1.py  test_api.py  test_engine.py  test_llm_strategy.py  test_queries.py
