[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-triage"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
agent = "agent_runner.cli:main"

[tool.setuptools.packages.find]
include = ["agent_runner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
